--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "podcast-api": "^1.1.1"
   },
   "devDependencies": {
     "nodemon": "1.18.4"
